force-app/main/default/objects/Case/fields/Last_Comment_date__c.field-meta.xml
<CustomField>
    <fullName>Last_Comment_date__c</fullName>
    <label>Last Comment date</label>
    <type>Date</type>
</CustomField>