force-app/main/default/objects/Case/fields/Legal_Approval_or_Review__c.field-meta.xml
<CustomField>
    <fullName>Legal_Approval_or_Review__c</fullName>
    <inlineHelpText>Has Legal reviewed the project/change in terms of any regulatory, legal, or contractual requirements
(not data privacy related)? If yes, please attach proof of review and approval within the last 30 days.
Noncompliance with regulations and contractual commitments can incur penalties.</inlineHelpText>
    <label>Legal Approval or Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>