force-app/main/default/objects/Case/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Please put in Legal Name. Necessary for company credit card.</description>
    <label>Legal Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>