force-app/main/default/objects/Case/fields/Licenses__c.field-meta.xml
<CustomField>
    <fullName>Licenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licenses</label>
    <type>Checkbox</type>
</CustomField>