force-app/main/default/objects/Case/fields/Malware_Description__c.field-meta.xml
<CustomField>
    <fullName>Malware_Description__c</fullName>
    <label>Malware Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>