force-app/main/default/objects/Case/fields/Manager_Position__c.field-meta.xml
<CustomField>
    <fullName>Manager_Position__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Position</label>
    <type>Checkbox</type>
</CustomField>