force-app/main/default/objects/Case/fields/Manually_Trigger_Talent_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Manually_Trigger_Talent_Tasks__c</fullName>
    <inlineHelpText>Use this field to manually trigger the talent tasks for other markets or old cases that may not have had them triggered.</inlineHelpText>
    <label>Manually Trigger Talent Tasks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
            <value>
                <fullName>Offboarding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>