force-app/main/default/objects/Case/fields/Materials_for_activities_IN_the_class__c.field-meta.xml
<CustomField>
    <fullName>Materials_for_activities_IN_the_class__c</fullName>
    <label>Materials for activities IN the class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Videos</fullName>
            </value>
            <value>
                <fullName>Exercises</fullName>
            </value>
            <value>
                <fullName>Training “toys”</fullName>
            </value>
            <value>
                <fullName>Instructor provided materials/handouts</fullName>
            </value>
            <value>
                <fullName>Production provided Instructional Materials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>