force-app/main/default/objects/Case/fields/Modify_established_credentialing__c.field-meta.xml
<CustomField>
    <fullName>Modify_established_credentialing__c</fullName>
    <inlineHelpText>Will there be a need to modify established credentialing and access management processes and
infrastructure? If so, please explain.
Implication: Business processes and IT infrastructure changes often indicate changes to the access control
infrastructure. Not applying such changes can put the enterprise at risk of unauthorized access.</inlineHelpText>
    <label>Modify established credentialing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>