force-app/main/default/objects/Case/fields/Multi_Factor_Authentication__c.field-meta.xml
<CustomField>
    <fullName>Multi_Factor_Authentication__c</fullName>
    <inlineHelpText>Is multi-factor authentication available?</inlineHelpText>
    <label>Multi-Factor Authentication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>