force-app/main/default/objects/Case/fields/Names_of_product_solution_to_Change__c.field-meta.xml
<CustomField>
    <fullName>Names_of_product_solution_to_Change__c</fullName>
    <label>Names of Product/Solution to change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>