force-app/main/default/objects/Case/fields/New_Hire_Shirt_size__c.field-meta.xml
<CustomField>
    <fullName>New_Hire_Shirt_size__c</fullName>
    <label>New Hire Shirt size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>XLarge</fullName>
            </value>
            <value>
                <fullName>XXLarge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>