force-app/main/default/objects/Case/fields/New_Hire_will_pick_up_from_office__c.field-meta.xml
<CustomField>
    <fullName>New_Hire_will_pick_up_from_office__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the New hire will be picking up the welcome box and hardware/supplies from the office. We will not be shipping.</inlineHelpText>
    <label>New Hire will pick up from office</label>
    <type>Checkbox</type>
</CustomField>