force-app/main/default/objects/Case/fields/New_or_Existing_Process_es__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing_Process_es__c</fullName>
    <inlineHelpText>Does the project/change involve a new or existing process(es) in a current system? If so, please
explain.
Implication: New processes can introduce new information security risk into the enterprise. Identifying that risk must
be done early in the project to provide time to research mitigating controls or delay the project.</inlineHelpText>
    <label>New or Existing Process(es)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>