force-app/main/default/objects/Case/fields/New_Process__c.field-meta.xml
<CustomField>
    <fullName>New_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Process</label>
    <type>Checkbox</type>
</CustomField>