force-app/main/default/objects/Case/fields/New_State_needs_to_be_set_up_for_payroll__c.field-meta.xml
<CustomField>
    <fullName>New_State_needs_to_be_set_up_for_payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New State needs to be set up for payroll</label>
    <type>Checkbox</type>
</CustomField>