force-app/main/default/objects/Case/fields/New_Systems_Description__c.field-meta.xml
<CustomField>
    <fullName>New_Systems_Description__c</fullName>
    <description>Involve current or new systems?</description>
    <inlineHelpText>Does your project/change involve any current or new systems? If so, please list, including if there will
be an integration between systems.
Implication: Creating new processes or data in current or new systems can introduce new information security risk to
the enterprise. Identifying that risk must be done early in the project to provide time to research mitigating controls
or delay the project.</inlineHelpText>
    <label>Current or New Systems Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>