force-app/main/default/objects/Case/fields/New_Vendors__c.field-meta.xml
<CustomField>
    <fullName>New_Vendors__c</fullName>
    <inlineHelpText>Does this project/change include the onboarding of any new vendors, not including third-party
consultants or developers? If so, please list. Implication: The use of vendors can introduce new information security risk into the enterprise and into the overall business process.</inlineHelpText>
    <label>New Vendors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>