force-app/main/default/objects/Case/fields/Object_being_changed__c.field-meta.xml
<CustomField>
    <fullName>Object_being_changed__c</fullName>
    <label>Object being changed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>Training Events</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Associated Training Contact</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Advanced Tracks</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Virtual Coaching</fullName>
            </value>
            <value>
                <fullName>Consulting Time Trackers</fullName>
            </value>
            <value>
                <fullName>Referenceable Clients</fullName>
            </value>
            <value>
                <fullName>Executive Panel</fullName>
            </value>
            <value>
                <fullName>Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>