force-app/main/default/objects/Case/fields/Outage_performance_issue_description__c.field-meta.xml
<CustomField>
    <fullName>Outage_performance_issue_description__c</fullName>
    <label>Outage/performance issue description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>