force-app/main/default/objects/Case/fields/Participant_Presentation_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Participant_Presentation_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participant Presentation &amp; Feedback</label>
    <type>Checkbox</type>
</CustomField>