force-app/main/default/objects/Case/fields/People_affected__c.field-meta.xml
<CustomField>
    <fullName>People_affected__c</fullName>
    <label>People affected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only 1</fullName>
            </value>
            <value>
                <fullName>Multiple People/whole department</fullName>
            </value>
            <value>
                <fullName>Multiple departments</fullName>
            </value>
            <value>
                <fullName>Multiple Markets</fullName>
            </value>
            <value>
                <fullName>The whole company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>