force-app/main/default/objects/Case/fields/Personal_Data__c.field-meta.xml
<CustomField>
    <fullName>Personal_Data__c</fullName>
    <inlineHelpText>Do these processes involve personal data? If yes, please list types/categories.
Response</inlineHelpText>
    <label>Personal Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>