force-app/main/default/objects/Case/fields/Personal_Data_Description__c.field-meta.xml
<CustomField>
    <fullName>Personal_Data_Description__c</fullName>
    <inlineHelpText>Do these processes involve personal data? If yes, please list types/categories.
Response</inlineHelpText>
    <label>Personal Data Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>