force-app/main/default/objects/Case/fields/Please_select_the_nature_of_your_request__c.field-meta.xml
<CustomField>
    <fullName>Please_select_the_nature_of_your_request__c</fullName>
    <label>Please select the nature of your request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SALESFORCE(AND ALL ADD INS)</fullName>
            </value>
            <value>
                <fullName>MICROSOFT APPLICATION SUPPORT (HOW-TO’S)</fullName>
            </value>
            <value>
                <fullName>JIVE PHONE SYSTEM REQUEST</fullName>
            </value>
            <value>
                <fullName>NEW SOFTWARE OR OBTAIN LICENSE TO EXISTING SOFTWARE</fullName>
            </value>
            <value>
                <fullName>MICROSOFT APPLICATION SUPPORT (IF APP IS BROKEN): Please contact Xerox</fullName>
            </value>
            <value>
                <fullName>WINDOWS 10 OPERATING SYSTEM SUPPORT: Please contact Xerox</fullName>
            </value>
            <value>
                <fullName>HARDWARE (MONITORS NOT WORKING ETC): Please contact Xerox</fullName>
            </value>
            <value>
                <fullName>WINDOWS UPDATES: Please contact Xerox</fullName>
            </value>
            <value>
                <fullName>AV/MALWARE: Please contact Xerox</fullName>
            </value>
            <value>
                <fullName>BARRACUDA (DAY TO DAY, RELEASING EMAILS): Please contact Xerox</fullName>
            </value>
            <value>
                <fullName>PRINTING: Please contact Xerox</fullName>
            </value>
            <value>
                <fullName>WIFI: Please contact Xerox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>