force-app/main/default/objects/Case/fields/Please_state_the_emergency__c.field-meta.xml
<CustomField>
    <fullName>Please_state_the_emergency__c</fullName>
    <label>Please state the emergency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIGH (Entire dept or multiple users impacted)</fullName>
            </value>
            <value>
                <fullName>MEDIUM (Only myself impacted)</fullName>
            </value>
            <value>
                <fullName>LOW (Can wait until someone is available or general inquiry)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>