force-app/main/default/objects/Case/fields/Potential_alternatives_to_consider__c.field-meta.xml
<CustomField>
    <fullName>Potential_alternatives_to_consider__c</fullName>
    <label>Potential alternatives to consider?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>