force-app/main/default/objects/Case/fields/Pre_program__c.field-meta.xml
<CustomField>
    <fullName>Pre_program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-program</label>
    <type>Checkbox</type>
</CustomField>