force-app/main/default/objects/Case/fields/Previous_Manager__c.field-meta.xml
<CustomField>
    <fullName>Previous_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Previous Manager)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>