force-app/main/default/objects/Case/fields/Product_SME_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Product_SME_if_applicable__c</fullName>
    <label>Product SME (if applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>