force-app/main/default/objects/Case/fields/Product_Solution_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Solution_Category__c</fullName>
    <label>Product/Solution Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory Service</fullName>
            </value>
            <value>
                <fullName>Digital Product or Tool</fullName>
            </value>
            <value>
                <fullName>eLearning</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Methodology</fullName>
            </value>
            <value>
                <fullName>Model</fullName>
            </value>
            <value>
                <fullName>Research Data</fullName>
            </value>
            <value>
                <fullName>Training Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>