force-app/main/default/objects/Case/fields/Proposed_resolution__c.field-meta.xml
<CustomField>
    <fullName>Proposed_resolution__c</fullName>
    <label>Proposed resolution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>