force-app/main/default/objects/Case/fields/Prosci_Department_systems_process_desc__c.field-meta.xml
<CustomField>
    <fullName>Prosci_Department_systems_process_desc__c</fullName>
    <inlineHelpText>Does this project/change involve systems or processes owned by other Prosci departments? If so,
please list.
Implications: One business unit cannot put another at risk without both parties knowing it and allowing it to occur.</inlineHelpText>
    <label>Prosci Department systems/process desc.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>