force-app/main/default/objects/Case/fields/Prosci_Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Prosci_Risk_Description__c</fullName>
    <label>Prosci Risk Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>