force-app/main/default/objects/Case/fields/Prosci_RiskM__c.field-meta.xml
<CustomField>
    <fullName>Prosci_RiskM__c</fullName>
    <label>Prosci Risk</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Privacy</fullName>
            </value>
            <value>
                <fullName>Business Continuity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>