force-app/main/default/objects/Case/fields/PSU__c.field-meta.xml
<CustomField>
    <fullName>PSU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PSU</label>
    <type>Checkbox</type>
</CustomField>