force-app/main/default/objects/Case/fields/Purpose_for_processing_personal_data__c.field-meta.xml
<CustomField>
    <fullName>Purpose_for_processing_personal_data__c</fullName>
    <inlineHelpText>Please describe the purpose for processing personal data. Please also include who will have access to
this data.</inlineHelpText>
    <label>Purpose for processing personal data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>