force-app/main/default/objects/Case/fields/Reason_for_the_change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_the_change__c</fullName>
    <inlineHelpText>Whose problem does the change solve?  Include any data or evidence to support the need for this change</inlineHelpText>
    <label>Reason for the change:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>