force-app/main/default/objects/Case/fields/Release_Level__c.field-meta.xml
<CustomField>
    <fullName>Release_Level__c</fullName>
    <label>Release Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>