force-app/main/default/objects/Case/fields/Reporting_violation_of_acceptable_use__c.field-meta.xml
<CustomField>
    <fullName>Reporting_violation_of_acceptable_use__c</fullName>
    <label>Reporting violation of acceptable use?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>