force-app/main/default/objects/Case/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Select this with the system to help root out what types of cases we are getting. This is an unrestricted picklist so you can add something new if you don&apos;t see what you are looking for.</description>
    <inlineHelpText>What type of requests are we receiving? Select from the drop down or add your own item, if what you need is not in there.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Access Request</fullName>
            </value>
            <value>
                <fullName>Configuration Change</fullName>
            </value>
            <value>
                <fullName>Contract renewal</fullName>
            </value>
            <value>
                <fullName>DNS</fullName>
            </value>
            <value>
                <fullName>ECommerce</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>Laptop Hardware</fullName>
            </value>
            <value>
                <fullName>Logging</fullName>
            </value>
            <value>
                <fullName>Network Hardware</fullName>
            </value>
            <value>
                <fullName>Network Hosting</fullName>
            </value>
            <value>
                <fullName>Offboarding</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Receiving Error</fullName>
            </value>
            <value>
                <fullName>Report Request</fullName>
            </value>
            <value>
                <fullName>Reset Password</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>