force-app/main/default/objects/Case/fields/Request_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_Other__c</fullName>
    <description>If you select other, use this field to put what type of request you have.</description>
    <inlineHelpText>If you selected other for request type, type in what type of request it is.</inlineHelpText>
    <label>Request Type Other</label>
    <length>80</length>
    <type>Text</type>
</CustomField>