force-app/main/default/objects/Case/fields/Reset_Password_Type__c.field-meta.xml
<CustomField>
    <fullName>Reset_Password_Type__c</fullName>
    <label>Reset Password Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>O365</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Other Apps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>