force-app/main/default/objects/Case/fields/Reviewer_s__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_s__c</fullName>
    <label>Reviewer(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>