force-app/main/default/objects/Case/fields/Risk_Investment_Effort_Value_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Risk_Investment_Effort_Value_of_Change__c</fullName>
    <label>Risk/Investment/Effort/Value of Change</label>
    <type>TextArea</type>
</CustomField>