force-app/main/default/objects/Case/fields/Role_Requires_Bio_Headshot__c.field-meta.xml
<CustomField>
    <fullName>Role_Requires_Bio_Headshot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Role Requires Bio/Headshot</label>
    <type>Checkbox</type>
</CustomField>