force-app/main/default/objects/Case/fields/Role_Requires_Business_Cards__c.field-meta.xml
<CustomField>
    <fullName>Role_Requires_Business_Cards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Role Requires Business Cards</label>
    <type>Checkbox</type>
</CustomField>