force-app/main/default/objects/Case/fields/Role_Requires_Company_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Role_Requires_Company_Credit_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Role Requires Company Credit Card</label>
    <type>Checkbox</type>
</CustomField>