force-app/main/default/objects/Case/fields/Salesforce_Admin_Notes__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Admin_Notes__c</fullName>
    <label>Salesforce Admin Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>