force-app/main/default/objects/Case/fields/Screenshots__c.field-meta.xml
<CustomField>
    <fullName>Screenshots__c</fullName>
    <label>Screenshots</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>