force-app/main/default/objects/Case/fields/Security_Breached__c.field-meta.xml
<CustomField>
    <fullName>Security_Breached__c</fullName>
    <label>Security Breached</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - Someone has gained unauthorized access to Prosci&apos;s systems</fullName>
            </value>
            <value>
                <fullName>No - I don&apos;t think someone has gained access</fullName>
            </value>
            <value>
                <fullName>Unsure - I don&apos;t know if someone has access.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>