force-app/main/default/objects/Case/fields/Sub2_Change_to_Product_or_Solution__c.field-meta.xml
<CustomField>
    <fullName>Sub2_Change_to_Product_or_Solution__c</fullName>
    <label>Sub2 Change to Product or Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-program</fullName>
            </value>
            <value>
                <fullName>In Program</fullName>
            </value>
            <value>
                <fullName>In Practice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>