force-app/main/default/objects/Case/fields/Sub3_Change_to_Product_or_Solution__c.field-meta.xml
<CustomField>
    <fullName>Sub3_Change_to_Product_or_Solution__c</fullName>
    <label>Sub3 Change to Product or Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>prework</fullName>
            </value>
            <value>
                <fullName>communications</fullName>
            </value>
            <value>
                <fullName>logistics</fullName>
            </value>
            <value>
                <fullName>course slides/presenation decks</fullName>
            </value>
            <value>
                <fullName>activity or breakout</fullName>
            </value>
            <value>
                <fullName>Knowledge checks, tests</fullName>
            </value>
            <value>
                <fullName>engagement/facilitation tactics</fullName>
            </value>
            <value>
                <fullName>participant presentation &amp; feedback</fullName>
            </value>
            <value>
                <fullName>communication</fullName>
            </value>
            <value>
                <fullName>licenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>